scripts/nullaway/wpi/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8.txt
../wpi/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/NUIController.java:182: error: [NullAway] dereferenced expression getWorld() is @Nullable
            getWorld().step(1f / 60f, 10);
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/NUIController.java:210: error: [NullAway] dereferenced expression getWorld() is @Nullable
            AABB bounds = getWorld().getWorldAABB();
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/Rectangle.java:172: error: [NullAway] dereferenced expression other is @Nullable
                PVector anchor = transformToLocalSpace(new PVector(other.getX(), other.getY()));
                                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/PhysicsComponent.java:47: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.world = world;
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/PhysicsComponent.java:53: error: [NullAway] dereferenced expression getWorld() is @Nullable
        this.body = getWorld().createBody(bodyDef);
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/PhysicsComponent.java:86: error: [NullAway] dereferenced expression getWorld() is @Nullable
        mouseJointDef.body1 = getWorld().getGroundBody();
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/PhysicsComponent.java:98: error: [NullAway] dereferenced expression getWorld() is @Nullable
            getWorld().destroyJoint(j);
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/Circle.java:153: error: [NullAway] dereferenced expression other is @Nullable
                PVector anchor = transformToLocalSpace(new PVector(other.getX(), other.getY()));
                                                                        ^
    (see http://t.uber.com/nullaway )
8 errors
